Modification du fichier

--- a/_posts/0000-01-02-SpiraTek.md
+++ b/_posts/0000-01-02-SpiraTek.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+J'ai modifié ce **fichier** c'est génial non ? 
 Use the left arrow to go back!
